# kama-ui-db-plugin

./: README.md  pyproject.toml
src/kui_db_plugin/: database.py  dbm_plugin.py  plugin.py  section.py  ui_plugin.py
src/kui_db_plugin/_pyinstaller_hooks/: hook-kui_db_plugin.py
src/kui_db_plugin/extractor/: text_resource_extractor.py  widgets_extractor.py
src/kui_db_plugin/importer/: text_resource_importer.py  widgets_importer.py
src/kui_db_plugin/migration/: v1__Create_ui_sections_table.sql  v2__Create_ui_widgets_and_events_table.sql  v3__Create_dynamic_image_table.sql  v3__Create_dynamic_resource_table.sql  v4__Create_text_resource_table.sql  v5__Create_setup_color_table.sql  v6__Create_setup_font_table.sql
src/kui_db_plugin/provider/: metadata.py  section.py  style.py  tr.py
tests/: test_database.py
tests/extractor/: test_text_resource_extractor.py
tests/importer/: test_text_resource_importer.py
